--- a/Intensidad_de_WiFi_por_Habitacion.ipynb
+++ b/Intensidad_de_WiFi_por_Habitacion.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMltZEAl75yVczTeilzdpLB"
+      "authorship_tag": "ABX9TyNn2VySbD0JdXuWtgk0ikpD"
     },
     "kernelspec": {
       "name": "python3",
@@ -27,7 +27,18 @@
     {
       "cell_type": "markdown",
       "source": [
-        "El primer paso sera realizar un analisis exploratorio del que nos permitira entender como esta compuesto y se necesita llevar adelante una limpieza para no perjudicar los resultados finales"
+        "El DataFrame obtenido representa una muestra de datos de intensidades de señales WiFi en una casa de 4 habitaciones. Tiene un total de 2000 muestras (500 muestras por habitacion). Cuenta asi con 8 columnas en total donde las 7 primeras son las antenas y la ultima son las habitaciones. \n",
+        "\n",
+        "El objetivo del analisis sera ver la precision con la que se puede ubicar dichas habitaciones solo conociendo las lecturas de las antenas. En resumen, se localizaran las piezas. "
+      ],
+      "metadata": {
+        "id": "PI4xlhFVxv46"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "El primer paso sera realizar un analisis exploratorio del que nos permitira entender como esta compuesto y si se necesita llevar adelante una limpieza para no perjudicar los resultados finales"
       ],
       "metadata": {
         "id": "mBkgN4IVonCR"
