--- a/Analisis_de_Demanda.ipynb
+++ b/Analisis_de_Demanda.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOS1U2fX20YQf1MuOHTB3zf",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyN2HQm942DBRsUolv3kZhD6"
     },
     "kernelspec": {
       "name": "python3",
@@ -16,16 +15,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/AleBoattini/Cartera/blob/main/Analisis_de_Demanda.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
@@ -41,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 65,
       "metadata": {
         "id": "KgUPVaUefyXG"
       },
@@ -123,7 +112,7 @@
       "metadata": {
         "id": "c1FUr36WiuQB"
       },
-      "execution_count": 17,
+      "execution_count": 66,
       "outputs": []
     },
     {
@@ -152,9 +141,9 @@
           "height": 322
         },
         "id": "hNlf40koiyTR",
-        "outputId": "90fcd04e-712a-496a-e0fc-5afb53b24630"
+        "outputId": "0a6aefa0-57a2-4ffe-dac0-9e06e94c7bf8"
       },
-      "execution_count": 18,
+      "execution_count": 67,
       "outputs": [
         {
           "output_type": "stream",
@@ -191,7 +180,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-d82db321-f3c0-4a4e-9cb8-d7e33a7d96ed\">\n",
+              "  <div id=\"df-9a67c1a0-78e1-4967-83f6-f2c46510152b\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -310,7 +299,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d82db321-f3c0-4a4e-9cb8-d7e33a7d96ed')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9a67c1a0-78e1-4967-83f6-f2c46510152b')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -361,12 +350,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-d82db321-f3c0-4a4e-9cb8-d7e33a7d96ed button.colab-df-convert');\n",
+              "          document.querySelector('#df-9a67c1a0-78e1-4967-83f6-f2c46510152b button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-d82db321-f3c0-4a4e-9cb8-d7e33a7d96ed');\n",
+              "          const element = document.querySelector('#df-9a67c1a0-78e1-4967-83f6-f2c46510152b');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -389,7 +378,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 67
         }
       ]
     },
@@ -412,9 +401,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ztxfNPsJkw0Q",
-        "outputId": "8c1e5558-095f-4dfd-a84d-0706d29be609"
+        "outputId": "a1524a7a-f8f8-437e-f3a9-e1cf9b2dc690"
       },
-      "execution_count": 19,
+      "execution_count": 68,
       "outputs": [
         {
           "output_type": "stream",
@@ -463,9 +452,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8rjDJXdJl0eH",
-        "outputId": "f481e899-a1c2-40e6-aee6-50277fc5fee6"
+        "outputId": "1bf61c1b-5127-40bc-9b0e-60a98d0239b4"
       },
-      "execution_count": 20,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -488,7 +477,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 69
         }
       ]
     },
@@ -513,19 +502,19 @@
           "height": 500
         },
         "id": "dvHMeg00nQkB",
-        "outputId": "e766c846-c6ca-4071-f58a-a1869b182095"
+        "outputId": "a1de19fb-6dbf-488d-aa2d-c3ae6cce3043"
       },
-      "execution_count": 21,
+      "execution_count": 70,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7fa6a6f7ae50>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7fa69f8ad0d0>"
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 70
         },
         {
           "output_type": "display_data",
@@ -576,9 +565,9 @@
           "height": 595
         },
         "id": "bfh1fKpZq4M0",
-        "outputId": "d6aae2ec-8567-4de0-8a61-9686a4152c17"
+        "outputId": "ec796fed-ea64-4b2b-a117-9229c3154153"
       },
-      "execution_count": 22,
+      "execution_count": 71,
       "outputs": [
         {
           "output_type": "display_data",
@@ -625,9 +614,9 @@
           "height": 483
         },
         "id": "JtfQlwHHvdhy",
-        "outputId": "4b52e91b-458a-45dd-b9f4-14c7cd056568"
+        "outputId": "2a6f0daa-8d73-4201-81e7-4c5194d86585"
       },
-      "execution_count": 23,
+      "execution_count": 72,
       "outputs": [
         {
           "output_type": "display_data",
@@ -651,278 +640,6 @@
       "metadata": {
         "id": "ULa8LWDphPcI"
       }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# Otra cosa mariposa"
-      ],
-      "metadata": {
-        "id": "KleLYdpaXfTx"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.linear_model import LinearRegression\n"
-      ],
-      "metadata": {
-        "id": "CipDf627ogYp"
-      },
-      "execution_count": 24,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Separo los dataframe en entrenamiento y prueba\n",
-        "\n",
-        "n=len(df)*0.8\n",
-        "df_train=df.copy().loc[:n]\n",
-        "df_test=df.copy().loc[n:]"
-      ],
-      "metadata": {
-        "id": "EBxnF3fYICgx"
-      },
-      "execution_count": 25,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Separo las variables\n",
-        "explicativas=df_train.drop('TOTAL DE PEDIDOS',axis=1)\n",
-        "objetivo=df_train['TOTAL DE PEDIDOS']\n",
-        "\n",
-        "# Entreno el modelo\n",
-        "regresion=LinearRegression()\n",
-        "regresion.fit(explicativas,objetivo)\n",
-        "\n",
-        "# Evaluo las prediccion\n",
-        "x_test=df_test.drop('TOTAL DE PEDIDOS',axis=1)\n",
-        "y_test=df_test['TOTAL DE PEDIDOS']\n",
-        "predi=regresion.predict(x_test)\n",
-        "\n",
-        "vista=df_test['TOTAL DE PEDIDOS']\n",
-        "prediccion=pd.DataFrame(predi)\n",
-        "\n",
-        "vista=pd.DataFrame(vista)\n",
-        "vista.reset_index(drop=True, inplace=True)\n",
-        "\n",
-        "vista=vista.join(prediccion)"
-      ],
-      "metadata": {
-        "id": "3ww8YxFCFHvY"
-      },
-      "execution_count": 26,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "vista"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 426
-        },
-        "id": "StRnZfTdXj6e",
-        "outputId": "817211e3-9505-4eb7-9150-96ed6b91251e"
-      },
-      "execution_count": 27,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "    TOTAL DE PEDIDOS         0\n",
-              "0             402607  402607.0\n",
-              "1             255061  255061.0\n",
-              "2             342606  342606.0\n",
-              "3             268640  268640.0\n",
-              "4             188601  188601.0\n",
-              "5             202022  202022.0\n",
-              "6             213509  213509.0\n",
-              "7             316849  316849.0\n",
-              "8             286412  286412.0\n",
-              "9             303447  303447.0\n",
-              "10            304950  304950.0\n",
-              "11            331900  331900.0"
-            ],
-            "text/html": [
-              "\n",
-              "  <div id=\"df-f5b2a4f4-a6ef-46e3-a81a-04dab62d84dd\">\n",
-              "    <div class=\"colab-df-container\">\n",
-              "      <div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>TOTAL DE PEDIDOS</th>\n",
-              "      <th>0</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>402607</td>\n",
-              "      <td>402607.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>255061</td>\n",
-              "      <td>255061.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>342606</td>\n",
-              "      <td>342606.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>268640</td>\n",
-              "      <td>268640.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>188601</td>\n",
-              "      <td>188601.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>5</th>\n",
-              "      <td>202022</td>\n",
-              "      <td>202022.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>6</th>\n",
-              "      <td>213509</td>\n",
-              "      <td>213509.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>7</th>\n",
-              "      <td>316849</td>\n",
-              "      <td>316849.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>8</th>\n",
-              "      <td>286412</td>\n",
-              "      <td>286412.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>9</th>\n",
-              "      <td>303447</td>\n",
-              "      <td>303447.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>10</th>\n",
-              "      <td>304950</td>\n",
-              "      <td>304950.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>11</th>\n",
-              "      <td>331900</td>\n",
-              "      <td>331900.0</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f5b2a4f4-a6ef-46e3-a81a-04dab62d84dd')\"\n",
-              "              title=\"Convert this dataframe to an interactive table.\"\n",
-              "              style=\"display:none;\">\n",
-              "        \n",
-              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
-              "       width=\"24px\">\n",
-              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
-              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
-              "  </svg>\n",
-              "      </button>\n",
-              "      \n",
-              "  <style>\n",
-              "    .colab-df-container {\n",
-              "      display:flex;\n",
-              "      flex-wrap:wrap;\n",
-              "      gap: 12px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert {\n",
-              "      background-color: #E8F0FE;\n",
-              "      border: none;\n",
-              "      border-radius: 50%;\n",
-              "      cursor: pointer;\n",
-              "      display: none;\n",
-              "      fill: #1967D2;\n",
-              "      height: 32px;\n",
-              "      padding: 0 0 0 0;\n",
-              "      width: 32px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert:hover {\n",
-              "      background-color: #E2EBFA;\n",
-              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
-              "      fill: #174EA6;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert {\n",
-              "      background-color: #3B4455;\n",
-              "      fill: #D2E3FC;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert:hover {\n",
-              "      background-color: #434B5C;\n",
-              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
-              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
-              "      fill: #FFFFFF;\n",
-              "    }\n",
-              "  </style>\n",
-              "\n",
-              "      <script>\n",
-              "        const buttonEl =\n",
-              "          document.querySelector('#df-f5b2a4f4-a6ef-46e3-a81a-04dab62d84dd button.colab-df-convert');\n",
-              "        buttonEl.style.display =\n",
-              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
-              "\n",
-              "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-f5b2a4f4-a6ef-46e3-a81a-04dab62d84dd');\n",
-              "          const dataTable =\n",
-              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
-              "                                                     [key], {});\n",
-              "          if (!dataTable) return;\n",
-              "\n",
-              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
-              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
-              "            + ' to learn more about interactive tables.';\n",
-              "          element.innerHTML = '';\n",
-              "          dataTable['output_type'] = 'display_data';\n",
-              "          await google.colab.output.renderOutput(dataTable, element);\n",
-              "          const docLink = document.createElement('div');\n",
-              "          docLink.innerHTML = docLinkHtml;\n",
-              "          element.appendChild(docLink);\n",
-              "        }\n",
-              "      </script>\n",
-              "    </div>\n",
-              "  </div>\n",
-              "  "
-            ]
-          },
-          "metadata": {},
-          "execution_count": 27
-        }
-      ]
     },
     {
       "cell_type": "markdown",
@@ -988,9 +705,9 @@
           "height": 548
         },
         "id": "AjMmkUjYk2tY",
-        "outputId": "ac2469fe-151a-4b3d-cfc1-3803e285e33f"
+        "outputId": "22f9bade-68c6-4253-8f32-528dc9668452"
       },
-      "execution_count": 63,
+      "execution_count": 73,
       "outputs": [
         {
           "output_type": "stream",
@@ -1077,9 +794,9 @@
           "height": 502
         },
         "id": "1sxeY2aZrlhE",
-        "outputId": "fb9bb96c-773e-45ac-b790-af28f3b7df74"
+        "outputId": "5e9dd2c4-3b81-41e9-e2d7-29b4bf7eadd7"
       },
-      "execution_count": 64,
+      "execution_count": 74,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1102,15 +819,6 @@
       ],
       "metadata": {
         "id": "RJkqSUBKymbB"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# Regresion lineal"
-      ],
-      "metadata": {
-        "id": "IzI2bhvRoZwk"
       }
     }
   ]
